--- a/幸存者偏差问题.md
+++ b/幸存者偏差问题.md
@@ -4,5 +4,7 @@
 >
 实际幸存者偏差问题指的是：   
 获取不到被初筛模型拒绝的用户的后续行为数据，则意味着没有后续数据对初筛模型判断的结果进行核实。
-在互联网反欺诈中，在关键业务节点才会对拒绝用户进行限制，如在注册/登录环节被拒绝的用户在注册/登录环节不会被拦截，而是在关键业务节点-提交订单时进行拦截，这样操作主要有以下几个作用：
- * 一定程度
+在互联网反欺诈中，在关键业务节点（获利转化点）才会对拒绝用户进行限制，如在注册/登录环节被拒绝的用户在注册/登录环节不会被拦截，而是在关键业务节点-提交订单时进行拦截，这样操作主要有以下几个作用：
+ * 解决幸存者偏差问题；
+ * 增加黑产作弊攻击成本。    
+ >如果直接在注册登录环节进行拦截，就向黑产表明风控系统已经将其识别，而且是通过其注册登录数据进行判别的，如此就为黑产提供了试错机制，只要其中有一个账号能够突破现有的策略，那么这个业务节点的风控就相当于完全沦陷。而在提交订单方进行拦截，此时用户已经过注册登录、浏览行为、加购行为等，此时黑产被拦截也难以知道自身到底是在哪个环节被拦截了，仅能够一个个环节进行试探，极大地增加了黑产的作弊攻击成本。
