--- a/解决幸存者偏差问题.md
+++ b/解决幸存者偏差问题.md
@@ -1,7 +1,7 @@
 ### 解决幸存者偏差问题
 #### 增量学习
-> 主要解决新旧知识不平衡的问题>
-通过XGBoost实现：先用历史样本训练前几棵树，然后用新的样本学习后面的树，从而平衡新样本与旧样本之间的关系。
+> 主要解决新旧知识不平衡的问题 >
+  通过XGBoost实现：先用历史样本训练前几棵树，然后用新的样本学习后面的树，从而平衡新样本与旧样本之间的关系。
 #### GAN（对抗网络）
-> GNN由生成模型以及判别模型两种模型组成，噪声通过生成模型生成新的样本，无偏分布的已知样本训练的判别模型，判别模型用以检测生成模型生成样本的效果
+GNN由生成模型以及判别模型两种模型组成，噪声通过生成模型生成新的样本，无偏分布的已知样本训练的判别模型，判别模型用以检测生成模型生成样本的效果
 #### GMM（高斯混合模型）
