--- a/解决幸存者偏差问题.md
+++ b/解决幸存者偏差问题.md
@@ -1,6 +1,6 @@
 ### 解决幸存者偏差问题
 #### 增量学习
-> 主要解决新旧知识不平衡的问题 >
+> 主要解决新旧知识不平衡的问题
 >
 通过XGBoost实现：先用历史样本训练前几棵树，然后用新的样本学习后面的树，从而平衡新样本与旧样本之间的关系。
 #### GAN（对抗网络）
